2009-01-24 Guido Scholz <guido.scholz@bayernline.de>
	* config-srcpd.*, ib.*, io.*, zimo.c: Support for circumvention
	of Intellibox BIBA function added to to speed up connection
	initialization if user configures the proper baudrate in
	srcpd.conf.

2009-01-21 Guido Scholz <guido.scholz@bayernline.de>
	* config-srcpd.c: Fixed counting of interface bus number,
	reported by Heiko Gau.
	* ddl.c, ddl_maerklin.c, ddl_nmra.c, ddl-s88.c, hsi-88.c,
	i2c-dev.c, ib.c, li100.c, loconet.c, loopback.c, m605x.c,
	selectrix.c, srcp-command.c, srcpd.c, srcp-fb.c, srcp-time.c,
	zimo.c: Unhide all usleep() system error messages.

2009-01-19 Guido Scholz <guido.scholz@bayernline.de>
	* hsi-88.c, ib.c, ddl-s88.c, li100.c, srcpd.c: All sleep()
	interruptions made visible as error level syslog messages.

2009-01-18 Guido Scholz <guido.scholz@bayernline.de>
	* srcp-time.*, srcp-command.c: Fixed locking of time variable(s),
	suspend time thread if not used.

2009-01-17 Matthias Trute <mtrute@users.sourceforge.net>
	* loconet.*: Support for GA and FB devices, communication
	  can be routed via a loconetovertcp server (e.g. JMRI or
	  lbserver)

2009-01-17 Guido Scholz <guido.scholz@bayernline.de>
	* srcp-time.*, srcp-command.c: Support for TERM 0 TIME added.

2009-01-13 Guido Scholz <guido.scholz@bayernline.de>
	* srcpd.c, srcp-server.*: Handling of server state variable
	cleaned up.

2009-01-12 Guido Scholz <guido.scholz@bayernline.de>
	* ddl-s88.c: Fixed init of s88 buses number 2, 3 and 4.

2008-12-29 Joerg Rottland <rottland@users.sourceforge.net>
	* ddl.c: Fixes from Torsten Vogt for simultaneous use of DCC and MM
	Configurable GA Adress shift (for backward compability)

--- Release 2.0.12 ----

2008-11-14 Guido Scholz <guido.scholz@bayernline.de>
	* configure.in, i2c-dev.c: Kernel version independend i2c header
	integration.

2008-08-22 Guido Scholz <guido.scholz@bayernline.de>
	* srcpd.c: Open syslog after daemonization to fix missing
	logging under Cygwin.
